Add checkpoints to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 data/
-models/latest.h5
+models/latest*.h5
 
 # Created by https://www.gitignore.io/api/python,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=python,visualstudiocode
